--- a/estilos/style.css
+++ b/estilos/style.css
@@ -19,8 +19,21 @@ header > h1{
     text-align: center;
 }
 
-menu{
+span#burger{
+    background-color: gray;
     display: block;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+span#burger:hover{
+    background-color: white;
+    color: black;
+}
+
+menu{
+    display: none;
 }
 
 menu > ul{
